--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sstgroup.xabaapp">
+<manifest package="com.sstgroup.xabaapp"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".XabaApplication"
@@ -12,10 +12,16 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.activities.LoginActivity">
+        </activity>
+        <activity android:name=".ui.activities.RegisterActivity">
+        </activity>
+        <activity android:name=".ui.activities.ForgottenPinActivity">
         </activity>
     </application>
 
