--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.MainActivity">
+        <activity android:name=".ui.activities.MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.LoginActivity">
-        </activity>
-        <activity android:name=".ui.activities.RegisterActivity">
-        </activity>
-        <activity android:name=".ui.activities.ForgottenPinActivity">
-        </activity>
+        <activity android:name=".ui.activities.LoginActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activities.RegisterActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activities.ForgottenPinActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
