Added SMS Broadcast receiver. Added intent filter. Fixed crash when registering with empty referral code.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
             android:name=".ui.activities.EditProfileActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.activities.EditPinActivity"/>
+        <receiver android:name=".listener.SMSReceiver">
+            <intent-filter android:priority="1000">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
